--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,12 +49,13 @@
       </section>
       <footer>
          <div class="grid-item">
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/platinum.png" alt="Home" width="30"></a>
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/platinum.png" alt="Home" width="30"></a>
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/platinum.png" alt="Home" width="30"></a>
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/platinum.png" alt="Home" width="30"></a>
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/platinum.png" alt="Home" width="30"></a>
 <!--
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/gainsboro.png" alt="Home" width="30"></a>
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/gainsboro.png" alt="Home" width="30"></a>
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/gainsboro.png" alt="Home" width="30"></a>
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/gainsboro.png" alt="Home" width="30"></a>
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/gainsboro.png" alt="Home" width="30"></a>
+
             <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Home" width="30"></a>
             <a href="https://www.vsual.co/shop/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logovsual.png" alt="Vsual" width="30"></a>
             <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
