--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,11 @@
 
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
             <p>
-               <a href="https://kushalsamant.github.io/anthologies.html">Anthologies</a><br>
-               <a href="https://kushalsamant.github.io/people.html">People</a><br>
+               <a href="https://kushalsamant.github.io/read-me.html">Readme</a><br>
                <a href="https://kushalsamant.github.io/profile.html">Profile</a><br>
+               <a href="https://kushalsamant.github.io/people.html">People</a><br>
                <a href="https://kushalsamant.github.io/work.html">Work</a><br>
+               <a href="https://kushalsamant.github.io/anthologies.html">Anthologies</a><br>
             <p>
             <div class="roadmap-spacer-1"></div>
 
