--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -71,6 +71,15 @@
     text-decoration: none;
   }
 
+  div {
+     width: 100%;
+     height: 400px;
+     background-image: url('img_flowers.jpg');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+}
+
 /* header styles
 -----------------------------------------------------------------------------*/
 
@@ -109,6 +118,16 @@
     margin: 15px;
     padding: 15px;
     text-align: left;
+  }
+
+
+  div {
+     width: 100%;
+     height: 400px;
+     background-image: url('img_flowers.jpg');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
   }
 
 /* section styles
@@ -166,6 +185,16 @@ section.grid-item {
   text-decoration: none;
 }
 
+
+  div {
+     width: 100%;
+     height: 400px;
+     background-image: url('img_flowers.jpg');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+  }
+
 /* footer styles
 -----------------------------------------------------------------------------*/
 
@@ -178,6 +207,16 @@ section.grid-item {
     text-align: right;
   }
 
+
+  div {
+     width: 100%;
+     height: 400px;
+     background-image: url('img_flowers.jpg');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+   }
+
   footer.grid-item {
     background-color: #111111;
     border-style: none;
@@ -188,6 +227,14 @@ section.grid-item {
     padding: 150px;
   }
 
+
+  div {
+     width: 100%;
+     height: 400px;
+     background-image: url('img_flowers.jpg');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
 }
 
 /* responsive designs
@@ -242,6 +289,16 @@ section.grid-item {
     margin: 5px;
     padding: 5px;
   }
+'
+
+  div {
+     width: 100%;
+     height: 400px;
+     background-image: url('img_flowers.jpg');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+}
 
   a:hover {
     background-color: #F11111;
