--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -74,7 +74,7 @@
   div {
      width: 100%;
      height: 400px;
-     background-image: url('img_flowers.jpg');
+     background-image: url('/assets/img/wallpaper.jpg');
      background-repeat: no-repeat;
      background-size: contain;
      border: 1px #F11111;
@@ -124,7 +124,7 @@
   div {
      width: 100%;
      height: 400px;
-     background-image: url('img_flowers.jpg');
+     background-image: url('/assets/img/wallpaper.jpg');
      background-repeat: no-repeat;
      background-size: contain;
      border: 1px #F11111;
@@ -189,7 +189,7 @@ section.grid-item {
   div {
      width: 100%;
      height: 400px;
-     background-image: url('img_flowers.jpg');
+     background-image: url('/assets/img/wallpaper.jpg');
      background-repeat: no-repeat;
      background-size: contain;
      border: 1px #F11111;
@@ -211,7 +211,7 @@ section.grid-item {
   div {
      width: 100%;
      height: 400px;
-     background-image: url('img_flowers.jpg');
+     background-image: url('/assets/img/wallpaper.jpg');
      background-repeat: no-repeat;
      background-size: contain;
      border: 1px #F11111;
@@ -231,7 +231,7 @@ section.grid-item {
   div {
      width: 100%;
      height: 400px;
-     background-image: url('img_flowers.jpg');
+     background-image: url('/assets/img/wallpaper.jpg');
      background-repeat: no-repeat;
      background-size: contain;
      border: 1px #F11111;
@@ -294,7 +294,7 @@ section.grid-item {
   div {
      width: 100%;
      height: 400px;
-     background-image: url('img_flowers.jpg');
+     background-image: url('/assets/img/wallpaper.jpg');
      background-repeat: no-repeat;
      background-size: contain;
      border: 1px #F11111;
