--- a/_sass/jekyll-theme-minimal-red-borders.scss
+++ b/_sass/jekyll-theme-minimal-red-borders.scss
@@ -36,6 +36,15 @@
     row-gap: 15px;
   }
 
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+  }
+
   body {
     background-color: #111111;
     color: #FFFFFF;
@@ -111,6 +120,15 @@
     text-align: left;
   }
 
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+  }
+
 /* section styles
 -----------------------------------------------------------------------------*/
 
@@ -142,6 +160,15 @@ section.grid-item {
 .roadmap-spacer-1 {
   margin-bottom: 15px;
   padding-bottom: 15px;
+}
+
+div {
+  width: 100%;
+  height: 1344px;
+  background-image: url('/assets/img/wallpaper.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px #F11111;
 }
 
 .btn:hover {
@@ -188,6 +215,15 @@ section.grid-item {
     padding: 150px;
   }
 
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+  }
+
 }
 
 /* responsive designs
@@ -223,6 +259,15 @@ section.grid-item {
     margin: 5px;
     padding: 5px;
     row-gap: 5px;
+  }
+
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
   }
 
   body {
@@ -299,6 +344,15 @@ section.grid-item {
     text-align: left;
   }
 
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+  }
+
 /* section styles
 -----------------------------------------------------------------------------*/
 
@@ -329,6 +383,15 @@ section.grid-item {
   .roadmap-spacer-1 {
     margin-bottom: 15px;
     padding-bottom: 15px;
+  }
+
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
   }
 
   .btn {
@@ -373,6 +436,15 @@ section.grid-item {
     grid-row: 3 / 4;
     margin: 5px;
     padding: 5px;
+  }
+
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
   }
 
 }
