--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -36,6 +36,15 @@
     row-gap: 15px;
   }
 
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+  }
+
   body {
     background-color: #111111;
     color: #FFFFFF;
@@ -70,15 +79,6 @@
     color: #F11111;
     text-decoration: none;
   }
-
-  div {
-     width: 100%;
-     height: 400px;
-     background-image: url('/assets/img/wallpaper.jpg');
-     background-repeat: no-repeat;
-     background-size: contain;
-     border: 1px #F11111;
-}
 
 /* header styles
 -----------------------------------------------------------------------------*/
@@ -120,11 +120,10 @@
     text-align: left;
   }
 
-
   div {
      width: 100%;
-     height: 400px;
-     background-image: url('/assets/img/wallpaper.jpg');
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
      background-repeat: no-repeat;
      background-size: contain;
      border: 1px #F11111;
@@ -163,6 +162,15 @@ section.grid-item {
   padding-bottom: 15px;
 }
 
+div {
+  width: 100%;
+  height: 1344px;
+  background-image: url('/assets/img/wallpaper.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px #F11111;
+}
+
 .btn:hover {
   background-color: #111111;
   border: 1px solid #F11111;
@@ -185,16 +193,6 @@ section.grid-item {
   text-decoration: none;
 }
 
-
-  div {
-     width: 100%;
-     height: 400px;
-     background-image: url('/assets/img/wallpaper.jpg');
-     background-repeat: no-repeat;
-     background-size: contain;
-     border: 1px #F11111;
-  }
-
 /* footer styles
 -----------------------------------------------------------------------------*/
 
@@ -207,16 +205,6 @@ section.grid-item {
     text-align: right;
   }
 
-
-  div {
-     width: 100%;
-     height: 400px;
-     background-image: url('/assets/img/wallpaper.jpg');
-     background-repeat: no-repeat;
-     background-size: contain;
-     border: 1px #F11111;
-   }
-
   footer.grid-item {
     background-color: #111111;
     border-style: none;
@@ -227,14 +215,15 @@ section.grid-item {
     padding: 150px;
   }
 
-
   div {
      width: 100%;
-     height: 400px;
-     background-image: url('/assets/img/wallpaper.jpg');
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
      background-repeat: no-repeat;
      background-size: contain;
      border: 1px #F11111;
+  }
+
 }
 
 /* responsive designs
@@ -272,6 +261,15 @@ section.grid-item {
     row-gap: 5px;
   }
 
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+  }
+
   body {
     background-color: #111111;
     color: #FFFFFF;
@@ -289,16 +287,6 @@ section.grid-item {
     margin: 5px;
     padding: 5px;
   }
-'
-
-  div {
-     width: 100%;
-     height: 400px;
-     background-image: url('/assets/img/wallpaper.jpg');
-     background-repeat: no-repeat;
-     background-size: contain;
-     border: 1px #F11111;
-}
 
   a:hover {
     background-color: #F11111;
@@ -356,6 +344,15 @@ section.grid-item {
     text-align: left;
   }
 
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
+  }
+
 /* section styles
 -----------------------------------------------------------------------------*/
 
@@ -386,6 +383,15 @@ section.grid-item {
   .roadmap-spacer-1 {
     margin-bottom: 15px;
     padding-bottom: 15px;
+  }
+
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
   }
 
   .btn {
@@ -430,6 +436,15 @@ section.grid-item {
     grid-row: 3 / 4;
     margin: 5px;
     padding: 5px;
+  }
+
+  div {
+     width: 100%;
+     height: 1344px;
+     background-image: url('/assets/img/wallpaper.png');
+     background-repeat: no-repeat;
+     background-size: contain;
+     border: 1px #F11111;
   }
 
 }
