--- a/_sass/jekyll-theme-minimal-darkgrey-background.scss
+++ b/_sass/jekyll-theme-minimal-darkgrey-background.scss
@@ -38,10 +38,10 @@
 
   div {
      width: 100%;
-     height: 400px;
+     height: 9144px;
      background-image: url('/assets/img/wallpaper.png');
      background-repeat: no-repeat;
-     background-size: contain;
+     background-size: cover;
      border: 1px #F11111;
   }
 
@@ -239,7 +239,7 @@ section.grid-item {
      height: 400px;
      background-image: url('/assets/img/wallpaper.png');
      background-repeat: no-repeat;
-     background-size: contain;
+     background-size: cover;
      border: 1px #F11111;
   }
 
