--- a/_sass/jekyll-theme-minimal-platinum-background.scss
+++ b/_sass/jekyll-theme-minimal-platinum-background.scss
@@ -41,7 +41,7 @@
      height: 400px;
      background-image: url('/assets/img/wallpaper.png');
      background-repeat: no-repeat;
-     background-size: contain;
+     background-size: cover;
      border: 1px #F11111;
   }
 
@@ -239,7 +239,7 @@ section.grid-item {
      height: 400px;
      background-image: url('/assets/img/wallpaper.png');
      background-repeat: no-repeat;
-     background-size: contain;
+     background-size: cover;
      border: 1px #F11111;
   }
 
