--- a/_sass/jekyll-theme-minimal-red-borders.scss
+++ b/_sass/jekyll-theme-minimal-red-borders.scss
@@ -25,7 +25,7 @@
   }
 
   .grid-container {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     column-gap: 15px;
     display: grid;
@@ -37,7 +37,7 @@
   }
 
   body {
-    background-color: #111111;
+    background-color: #11111177;
     background-image: url('/assets/img/wallpaper.png');
     background-size: cover;
     color: #FFFFFF;
@@ -57,7 +57,7 @@
   }
 
   a:hover {
-    background-color: #F11111;
+    background-color: #F1111177;
     color: #111111;
     margin: 1px;
     padding: 1px;
@@ -95,7 +95,7 @@
   }
 
   header.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / 2;
@@ -126,7 +126,7 @@ section p {
 }
 
 section.grid-item {
-  background-color: #111111;
+  background-color: #11111177;
   border-style: none;
   font-size: 15px;
   grid-column: 2 / 3;
@@ -147,7 +147,7 @@ section.grid-item {
 }
 
 .btn:hover {
-  background-color: #111111;
+  background-color: #11111177;
   border: 1px solid #F11111;
   border-radius: 45px;
   margin: 15px;
@@ -158,7 +158,7 @@ section.grid-item {
 }
 
 .btn {
-  background-color: #F11111;
+  background-color: #F1111177;
   border: 1px solid #111111;
   border-radius: 45px;
   margin: 15px;
@@ -181,7 +181,7 @@ section.grid-item {
   }
 
   footer.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / 2;
@@ -216,7 +216,7 @@ section.grid-item {
   }
 
   .grid-container {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     column-gap: 5px;
     display: grid;
@@ -228,7 +228,7 @@ section.grid-item {
   }
 
   body {
-    background-color: #111111;
+    background-color: #11111177;
     background-image: url('/assets/img/wallpaper.png');
     background-size: cover;
     color: #FFFFFF;
@@ -248,7 +248,7 @@ section.grid-item {
   }
 
   a:hover {
-    background-color: #F11111;
+    background-color: #F1111177;
     color: #111111;
     margin: 1px;
     padding: 1px;
@@ -286,7 +286,7 @@ section.grid-item {
   }
 
   header.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / 2;
@@ -316,7 +316,7 @@ section.grid-item {
   }
 
   section.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     grid-column: 1 / 2;
     grid-row: 2 / 3;
@@ -336,7 +336,7 @@ section.grid-item {
   }
 
   .btn {
-    background-color: #F11111;
+    background-color: #F1111177;
     border: 1px solid #111111;
     border-radius: 45px;
     margin: 15px;
@@ -347,7 +347,7 @@ section.grid-item {
   }
 
   .btn:hover {
-    background-color: #111111;
+    background-color: #11111177;
     border: 1px solid #F11111;
     border-radius: 45px;
     margin: 15px;
@@ -370,7 +370,7 @@ section.grid-item {
   }
 
   footer.grid-item {
-    background-color: #111111;
+    background-color: #11111177;
     border-style: none;
     font-size: 15px;
     grid-column: 1 / 2;
