--- a/_sass/jekyll-theme-minimal-platinum-background.scss
+++ b/_sass/jekyll-theme-minimal-platinum-background.scss
@@ -37,8 +37,11 @@
   }
 
   body {
-    background-color: #DDDDDD;
+    background-attachment: fixed;
+    background-color: #11111177;
     background-image: url('/assets/img/wallpaper.png');
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     color: #333333;
     font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -228,8 +231,11 @@ section.grid-item {
   }
 
   body {
-    background-color: #DDDDDD;
+    background-attachment: fixed;
+    background-color: #11111177;
     background-image: url('/assets/img/wallpaper.png');
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     color: #333333;
     font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
