--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -37,7 +37,7 @@
   }
 
   body {
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-color: #11111177;
     background-image: url('/assets/img/wallpaper.png');
     background-position: center;
@@ -231,7 +231,7 @@ section.grid-item {
   }
 
   body {
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-color: #11111177;
     background-image: url('/assets/img/wallpaper.png');
     background-position: center;
