--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,23 +47,25 @@
       <footer>
          <div class="grid-item">
             <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
-            <a href="https://www.youtube.com/channel/UCQCznCqUhALucLSk6N8ROPA/videos?view=0&sort=dd&flow=grid?sub_confirmation=1" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
-            <a href="https://in.pinterest.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest" width="30"></a>
-            <a href="https://payhip.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopayhip.png" alt="Payhip" width="30"></a>
-            <a href="https://www.linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logolinkedin.png" alt="LinkedIn" width="30"></a>
-            <a href="https://instagram.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="Instagram" width="30"></a>
-            <a href="https://www.github.com/kushalsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogithub.png" alt="GitHub" width="30"></a>
-<!--
-            <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
-            <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteespring.png" alt="Teespring" width="30"></a>
-            <a href="https://www.society6.com/samant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
-            <a href="https://www.society6.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
-            <a href="https://www.society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
-            <a href="https://www.society6.com/yourmailproject" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
-            <a href="https://www.sketchfab.com/kvshvl/models" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosketchfab.png" alt="Sketchfab" width="30"></a>
-            <a href="https://www.redbubble.com/people/kvshvl-/shop?asc=u" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
+            <a href="https://airbnb.co.in/users/show/21563871" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoairbnb.png" alt="Airbnb" width="30"></a>
+            <a href="https://discord.gg/36xan8g8" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logodiscord.png" alt="Discord" width="30"></a>
             <a href="https://fineartamerica.com/profiles/2-kushal-samant/shop" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logofineartamerica.png" alt="Fine Art America" width="30"></a>
-            <a href="https://www.airbnb.co.in/users/show/21563871" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoairbnb.png" alt="Airbnb" width="30"></a>
+            <a href="https://github.com/kushalsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logogithub.png" alt="GitHub" width="30"></a>
+            <a href="https://instagram.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="Instagram" width="30"></a>
+            <a href="https://linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logolinkedin.png" alt="LinkedIn" width="30"></a>
+            <a href="https://payhip.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopayhip.png" alt="Payhip" width="30"></a>
+            <a href="https://in.pinterest.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopinterest.png" alt="Pinterest" width="30"></a>
+            <a href="https://redbubble.com/people/kvshvl-/shop?asc=u" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoredbubble.png" alt="Redbubble" width="30"></a>
+            <a href="https://sketchfab.com/kvshvl/models" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosketchfab.png" alt="Sketchfab" width="30"></a>
+            <a href="https://society6.com/yourmailproject" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
+            <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
+            <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="Twitter" width="30"></a>
+            <a href="https://www.youtube.com/channel/UCQCznCqUhALucLSk6N8ROPA/videos?view=0&sort=dd&flow=grid?sub_confirmation=1" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
+<!--
+            <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteespring.png" alt="Teespring" width="30"></a>
+            <a href="https://society6.com/samant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
+            <a href="https://society6.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
+            <a href="https://society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
 -->
          </div>
       </footer>
