--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
-                  <a class="btn" href="https://instagram.com/kvshvl" rel="noopener noreferrer" target="_blank">Ver más</a><br>
+                  <a class="btn" href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank">Ver más</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
          </div>
