--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
                <a href="https://kushalsamant.github.io/profile.html">Profile</a><br>
                <a href="https://kushalsamant.github.io/people.html">People</a><br>
                <a href="https://kushalsamant.github.io/work.html">Work</a><br>
+               <a href="https://kushalsamant.github.io/anthologies.html">Anthologies</a><br>
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
@@ -46,7 +47,7 @@
       </section>
       <footer>
          <div class="grid-item">
-            <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Back to Home" width="30">Back to Home</a>
             <a href="https://airbnb.co.in/users/show/21563871" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoairbnb.png" alt="Airbnb" width="30"></a>
             <a href="https://discord.gg/36xan8g8" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logodiscord.png" alt="Discord" width="30"></a>
             <a href="https://fineartamerica.com/profiles/2-kushal-samant/shop" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logofineartamerica.png" alt="Fine Art America" width="30"></a>
@@ -60,12 +61,12 @@
             <a href="https://society6.com/yourmailproject" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
             <a href="https://twitter.com/kvshvl_" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logotwitter.png" alt="Twitter" width="30"></a>
-            <a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
 <!--
             <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteespring.png" alt="Teespring" width="30"></a>
             <a href="https://society6.com/samant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
+            <a href="https://youtube.com/@kvshvl/videos" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoyoutube.png" alt="YouTube" width="30"></a>
 -->
          </div>
       </footer>
