--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,7 @@
          <div class="grid-item">
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
             <p>
-               <a href="https://kushalsamant.github.io/read-me.html">Readme</a><br>
-               <a href="https://kushalsamant.github.io/profile.html">Profile</a><br>
-               <a href="https://kushalsamant.github.io/people.html">People</a><br>
-               <a href="https://kushalsamant.github.io/work.html">Work</a><br>
-               <a href="https://kushalsamant.github.io/anthologies.html">Anthologies</a><br>
+               <a href="https://kushalsamant.github.io/read.html">Read</a>-<a href="https://kushalsamant.github.io/me.html">me</a><br>
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
