--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,14 +27,14 @@
          <div class="grid-item">
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
             <p>
-               <a href="https://kushalsamant.github.io/read-me.html">Readme&#60;</a><br>
-               <a href="https://kushalsamant.github.io/profile.html">Profile&#60;</a><br>
-               <a href="https://kushalsamant.github.io/people.html">People&#60;</a><br>
-               <a href="https://kushalsamant.github.io/work.html">Work&#60;</a><br>
+               <a href="https://kushalsamant.github.io/read-me.html">Readme&nbsp;&#60;</a><br>
+               <a href="https://kushalsamant.github.io/profile.html">Profile&nbsp;&#60;</a><br>
+               <a href="https://kushalsamant.github.io/people.html">People&nbsp;&#60;</a><br>
+               <a href="https://kushalsamant.github.io/work.html">Work&nbsp;&#60;</a><br>
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
-                  <a class="btn" href="https://kushalsamant.github.io/vermas.html" rel="noopener noreferrer" target="_blank">Ver&nbsp;más&#60;</a><br>
+                  <a class="btn" href="https://kushalsamant.github.io/vermas.html" rel="noopener noreferrer" target="_blank">Ver&nbsp;más&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
          </div>
@@ -46,7 +46,7 @@
       </section>
       <footer>
          <div class="grid-item">
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Back to Home" width="30">Back to Home&#60;</a>
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Back to Home" width="30">Back&nbsp;to&nbsp;Home&#60;</a>
          </div>
       </footer>
    </div>
