--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       </section>
       <footer>
          <div class="grid-item">
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Back to Home" width="30">Back&nbsp;to&nbsp;Home&#60;</a>
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Back to Home" width="30">Back&nbsp;to&nbsp;Home&nbsp;&#60;</a>
          </div>
       </footer>
    </div>
