--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,12 +28,13 @@
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
             <p>
                <a href="https://kushalsamant.github.io/read-me.html">Readme&nbsp;&#60;</a><br>
+               <a href="https://kushalsamant.github.io/projects.html">Projects&nbsp;&#60;</a><br>
                <a href="https://kushalsamant.github.io/people.html">People&nbsp;&#60;</a><br>
                <a href="https://kushalsamant.github.io/about.html">About&nbsp;&#60;</a><br>
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
-                  <a class="btn" href="https://kushalsamant.github.io/projects.html">Projects&nbsp;&#60;</a><br>
+                  <a class="btn" href="https://kushalsamant.github.io/vermas.html">Ver&nbsp;más&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
          </div>
