--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
-                  <a class="btn" href="https://kushalsamant.github.io/vermas.html">Ver&nbsp;más&nbsp;&#60;</a><br>
+                  <a class="btn" href="https://kushalsamant.github.io">Ver&nbsp;más&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
          </div>
