--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       </section>
       <footer>
          <div class="grid-item">
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Back to Home" width="30">Back&nbsp;to&nbsp;Home&nbsp;&#60;</a>
+            <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Back to Home" width="30"></a>
             <a href="https://airbnb.co.in/users/show/21563871" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoairbnb.png" alt="Airbnb" width="30"></a>
             <a href="https://discord.gg/36xan8g8" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logodiscord.png" alt="Discord" width="30"></a>
             <a href="https://fineartamerica.com/profiles/2-kushal-samant/shop" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logofineartamerica.png" alt="Fine Art America" width="30"></a>
