--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="author" content="Kushal Samant">
-   <meta name="description" content="Official Site / KVSHVL">
+   <meta name="description" content="Official Site / Kushal Samant">
    <meta name="keywords" content="Architecture, CSS, Emoji Mosaic, HTML, Javascript, People, Places, Visual Art, Web">
    <meta name="p:domain_verify" content="bdc4625d72c6065e2d597f201d1843b7"/>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
