--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
          <div class="grid-item">
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
             <p>
-               <a href="https://kushalsamant.github.io/read-me.html">Readme&nbsp;&#60;</a><br>
                <a href="https://kushalsamant.github.io/projects.html">Projects&nbsp;&#60;</a><br>
                <a href="https://kushalsamant.github.io/people.html">People&nbsp;&#60;</a><br>
+               <a href="https://kushalsamant.github.io/getintouch.html">Get&nbsp;in&nbsp;touch&nbsp;&#60;</a><br>
                <a href="https://kushalsamant.github.io/about.html">About&nbsp;&#60;</a><br>
             </p>
             <div class="roadmap-spacer-1"></div>
