--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
       gtag('config', 'G-MX1SJPM4HE');
    </script>
 <!-- Google tag (gtag.js) end-->
+<!-- Impact tag start-->
+   <meta name='impact-site-verification' value='406b4bdb-6dd4-4bc5-8ec1-37530d818b69'>
+<!-- Impact tag end-->
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="author" content="Kushal Samant">
