--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="author" content="Kushal Samant">
    <meta name="description" content="Official Site / Kushal Samant">
-   <meta name="keywords" content="Architecture, CSS, Emoji Mosaic, HTML, Javascript, People, Places, Visual Art, Web">
+   <meta name="keywords" content="Architects, Architecture, Art, Artist, Artists, Curation, Curator, Curators, CSS, Emoji Mosaic, Film, HTML, Independent, Javascript, Media, Nomad, Nomads, Nomadic, Office, People, Places, Social, Visual Art, Web">
    <meta name="p:domain_verify" content="bdc4625d72c6065e2d597f201d1843b7"/>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="/assets/css/style.css">
@@ -30,10 +30,10 @@
          <div class="grid-item">
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
             <p>
-               <a href="https://kushalsamant.github.io/projects.html">Projects&nbsp;&#60;</a><br>
-               <a href="https://kushalsamant.github.io/people.html">People&nbsp;&#60;</a><br>
-               <a href="https://kushalsamant.github.io/connect.html">Connect&nbsp;&#60;</a><br>
                <a href="https://kushalsamant.github.io/about.html">About&nbsp;&#60;</a><br>
+               <a href="https://kushalsamant.github.io/connect.html">Connect&nbsp;&#60;</a><br>
+               <a href="https://kushalsamant.github.io/people.html">People&nbsp;&#60;</a><br>
+               <a href="https://kushalsamant.github.io/projects.html">Projects&nbsp;&#60;</a><br>
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
