--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
          <h1><a href="https://kushalsamant.github.io">KVSHVL</a></h1>
             <p>
                <a href="https://kushalsamant.github.io/about.html">About</a><br>
-               <a href="https://kushalsamant.github.io/people.html">People</a><br>
+               <a href="https://kushalsamant.github.io/connect.html">Connect</a><br>
             </p>
             <div class="roadmap-spacer-1"></div>
                <p>
