--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
-<!-- Fotomoto tag start-->
-<script type="text/javascript" src="//widget.fotomoto.com/stores/script/655edc7d210bd907c7c41d52956d234dddd5e6de.js"></script><noscript>If Javascript is disabled in your browser, to place orders please visit the page where I <a href="https://my.fotomoto.com/store/655edc7d210bd907c7c41d52956d234dddd5e6de">sell my photos</a>, powered by <a href="https://my.fotomoto.com/">Fotomoto</a>.</noscript>
-<!-- Fotomoto tag start-->
 <!-- Google tag (gtag.js) start-->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MX1SJPM4HE"></script>
    <script>
@@ -38,13 +35,11 @@
                <a href="https://kushalsamant.github.io/projects.html">Projects</a><br>
                <a href="https://kushalsamant.github.io/contact.html">Contact</a><br>
             </p>
-<!--
             <div class="roadmap-spacer-1"></div>
                <p>
                   <a class="btn" href="https://kushalsamant.github.io/starthere.html">Start Here&nbsp;&#60;</a><br>
                </p>
             <div class="roadmap-spacer-2"></div>
--->
 </div>
       </header>
       <section>
@@ -84,5 +79,9 @@
          </div>
       </footer>
    </div>
+<!-- Fotomoto tag start-->
+   <script type="text/javascript" src="//widget.fotomoto.com/stores/script/655edc7d210bd907c7c41d52956d234dddd5e6de.js"></script>
+   <noscript>If Javascript is disabled in your browser, to place orders please visit the page where I <a href=' https://my.fotomoto.com/store/655edc7d210bd907c7c41d52956d234dddd5e6de'>sell my photos</a>, powered by <a href='https://my.fotomoto.com'>Fotomoto</a>.</noscript>
+<!-- Fotomoto tag start-->
 </body>
 </html>
