--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,7 @@
             <a href="https://discord.gg/36xan8g8" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logodiscord.png" alt="Discord" width="30"></a>
             <a href="https://fineartamerica.com/profiles/2-kushal-samant/shop" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logofineartamerica.png" alt="Fine Art America" width="30"></a>
             <a href="https://instagram.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoinstagram.png" alt="Instagram" width="30"></a>
-iStock            <a href="https://in.pinterest.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoistock.png" alt="iStock" width="30"></a>
+            <a href="https://www.istockphoto.com/workwithus" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoistock.png" alt="iStock" width="30"></a>
             <a href="https://linkedin.com/in/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logolinkedin.png" alt="LinkedIn" width="30"></a>
             <a href="https://payhip.com/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopayhip.png" alt="Payhip" width="30"></a>
             <a href="https://pexels.com/@kushal-samant-1609529511/" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logopexels.png" alt="Pexels" width="30"></a>
@@ -70,7 +70,7 @@ iStock            <a href="https://in.pinterest.com/kvshvl" rel="noopener norefe
             <a href="https://society6.com/yourmailproject" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/samant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6  png" alt="Society6" width="30"></a>
-Stocksy            <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logostocksy.png" alt="Stocksy" width="30"></a>
+            <a href="https://www.stocksy.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logostocksy.png" alt="Stocksy" width="30"></a>
             <a href="https://teepublic.com/user/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteepublic.png" alt="Tee Public" width="30"></a>
             <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteespring.png" alt="Teespring" width="30"></a>
             <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
