--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
       </section>
       <footer>
          <div class="grid-item">
-            <a href="https://kushalsamant.github.io"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
+            <a href="https://kushalsamant.github.io/anthologies.html"><img src="/assets/img/logokvshvl.png" alt="Anthologies" width="30"></a>
 <!--
             <a href="https://stock.adobe.com/contributor/212199501/KVSHVL" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoadobe.png" alt="Adobe" width="30"></a>
             <a href="https://alamy.com/portfolio/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoalamy.png" alt="Alamy" width="30"></a>
