--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 <head>
-
-
-<style>
-        html {
-            scroll-behavior: smooth; /* Enable smooth scrolling for the entire page */
-        }
-</style>
-</head>
-  
+   <style>
+      html {scroll-behavior: smooth; } /* Enable smooth scrolling for the entire page */
+   </style>  
 <!-- Google tag (gtag.js) start-->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-MX1SJPM4HE"></script>
    <script>
