--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,7 @@
             <a href="https://society6.com/samant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6.png" alt="Society6" width="30"></a>
             <a href="https://society6.com/kushaldsamant" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosociety6  png" alt="Society6" width="30"></a>
             <a href="https://www.stocksy.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logostocksy.png" alt="Stocksy" width="30"></a>
+            <a href="https://kvshvl.substack.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logosubstack.png" alt="Substack" width="30"></a>
             <a href="https://teepublic.com/user/kvshvl" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteepublic.png" alt="Tee Public" width="30"></a>
             <a href="https://my-store-3157273.creator-spring.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logoteespring.png" alt="Teespring" width="30"></a>
             <a href="https://kvshvl.threadless.com" rel="noopener noreferrer" target="_blank"><img src="/assets/img/logothreadless.png" alt="Threadless" width="30"></a>
